Keyguard: Fix scramble pin layout not applying without reboot
* Ref: https://github.com/LineageOS/android_frameworks_base/commit/741dcffec14c0d3fd9ecd80a38b53bfcb4379585

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>